<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pattern Paint</string>
    <string name="pause_option">Pause</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Select a Pattern</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="tree_option">Trees</string>
    <string name="random_growth_option">Random Growth Options</string>
    <string name="random_growth_option_max_growths">Max Growths: </string>
    <string name="random_growth_option_pixel_width">Pixel Size: </string>
    <string name="tree_option_arc_angle">Arc Angle: </string>
    <string name="tree_option_arc_maxLength">Max Arc Length: </string>
    <string name="tree_option_shrink_rate">Shrink Rate: </string>
    <string name="tree_option_start_size">Start Size: </string>
    <string name="tree_option_end_size">End Size: </string>
    <string name="target_option">Seeker</string>
    <string name="seeker_option">Seeker Options</string>
    <string name="tree_options">Tree Options</string>
    <string name="seeker_force">Force</string>
    <string name="seeker_maxSpeed">Max Speed</string>
    <string name="particle_option">Particles</string>
    <string name="pixel_option">Select Pixel Type</string>
    <string name="pixel_outline_option">Use Outline?</string>
    <string name="splatter_size_option">Select Splatter Size</string>
    <string name="splatter_size_text">Splatter Size: </string>
    <string name="gravity_option">Select Gravity</string>
    <string name="particle_length_option">Select Particle Length</string>
    <string name="particle_length_dialog_text">Particle Length: </string>
    <string name="color_option">Select Pattern Color</string>
    <string name="background_color_option">Select Background Color</string>
    <string name="alpha_option">Select Alpha&#8230;</string>
    <string name="alpha_value_title">Select Alpha Value&#8230;</string>
    <string name="clear_screen_option">Clear Screen</string>
    <string name="undo_pattern_option">Undo</string>
    <string name="flatten_screen_option">Flatten Canvas</string>
    <string name="flatten_screen_warning">Flattening the canvas will merge all drawings to the background layer</string>
    <string name="save_screen_option">Save Screen</string>
    <string name="gravity_option_up">Up</string>
    <string name="gravity_option_down">Down</string>
    <string name="gravity_option_left">Left</string>
    <string name="gravity_option_right">Right</string>
    <string name="pixel_option_box">box</string>
    <string name="pixel_option_circle">circle</string>
    <string name="pixel_option_splatter">splatter</string>

    <string-array name="image_file_type_options">
        <item>PNG</item>
        <item>JPG</item>
    </string-array>
    
    <string-array name="pixel_types">
        <item>Box</item>
        <item>Circle</item>
        <item>Splatter</item>
    </string-array>
    
</resources>
