<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    
    <RadioGroup 
        android:id="@+id/pixel_options_radio"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioButton 
            android:id="@+id/radio_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pixel_option_box"/>
        <RadioButton 
            android:id="@+id/radio_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pixel_option_circle"/>
        <RadioButton 
            android:id="@+id/radio_splatter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"            
            android:text="@string/pixel_option_splatter"/>
        
    </RadioGroup>
    
    <CheckBox
        android:id="@+id/outline_checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pixel_outline_option" />

</LinearLayout>
